optimize calculating gains